crates/vexor-compiler/tests/golden/error/input/match_duplicate.vx
val xs = [1..5]
val result = match xs {
  // Duplicate x variable
  x : x : tail => x * x
}
export result
